--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@ Technical Summary
 
 Experience
 
-Facebook Application Development                     Published February 2008
+Facebook Application Development                      Published February 2008
 I am the author of the book "Facebook Application Development" (John Wiley
 &amp; Sons, Inc, published 2008). The book is part of the Wrox Professional
 Series and covers all aspects of Facebook application development. The book
@@ -23,7 +23,9 @@ is packed with example projects and source code to give readers a very
 hands-on guide. The book includes several open source projects covering a
 variety of topics spanning several thousand lines of code.
 
-Sr. Software Engineer (Blizzard Entertainment) February 2010 - Present
+Blizzard Entertainment                                February 2010 - Present
+Sr. Software Engineer 2                              September 2012 - Present
+Sr. Software Engineer                          February 2010 - September 2012
 I am largely reponsible for a handful of projects and services ranging from
 the search system used throughout all of the community sites to a distributed
 image rendering farm. One of my larger projects is the World of Warcraft
@@ -31,7 +33,7 @@ API, a multi-region RESTful web service that churns over 400 million requests
 a month. Recently, I have been playing a large role in the migration to Git
 and Maven.
 
-Platform Architect, Rupture (Electronic Arts) November 2008 - February 2010
+Platform Architect, Rupture   (Electronic Arts) November 2008 - February 2010
 I played several key roles within the EA Online organization and within
 Rupture. First and foremost, I built the Rupture Platform team and
 bootstrapped the technologies used by that team. This included advanced
@@ -39,7 +41,7 @@ data storage, processing and queuing models. I also introduced eJabberd to
 EA, helping reduce the cost of owning and operating instant message services
 used by game teams.
 
-Software Engineer, del.icio.us (Yahoo)         November 2006 - November 2008
+Software Engineer, del.icio.us (Yahoo)          November 2006 - November 2008
 As a software Engineer at Yahoo I've worked on several different teams
 within the company. The first group was the del.icio.us team as a back-end
 engineer developing the del.icio.us 2.0 system. This included a project
@@ -53,14 +55,14 @@ the back-end including a complex spam demographics and abuse detection
 system, the Facebook application and the del.icio.us 1.0 to 2.0 migration
 system.
 
-Software Engineer, SixApart                      January 2006 - October 2006
+Software Engineer, SixApart                       January 2006 - October 2006
 Lead feature development on the TypePad product. This includes working on
 the FeedBurner and Tucows integration involving cross platform development.
 Also worked on the TypePad-Mogile project. While at SixApart I've made
 several contributions to the open source community. Prototyped experimental
 API using the then evolving standard (Atom).
 
-Lead Developer, Feedster                      September 2005 - December 2005
+Lead Developer, Feedster                       September 2005 - December 2005
 Developed production mesh Linux server network with node auto-discovery to
 support dynamic service redistribution. Reengineered pure Perl web crawler,
 increasing throughput by 2400% (8,000,000 urls/day). Implemented massive
