Updating site with current resume.

--- a/_drafts/how-i-work.html
+++ b/_drafts/how-i-work.html
@@ -44,7 +44,7 @@ Doing one thing at a time. I put a lot of effort into not multi-tasking. If I ne
 
 **Besides your phone and computer, what gadget can't you live without?**
 
-I'd probably say my torrent box and raspberry pi. It is a great combo for downloading tv shows onto a shared drive on my home network and having XMBC (openelec) play them with my tv.
+TBD
 
 **What's your sleep routine like?**
 
