Adding firefox post.

--- a/about.html
+++ b/about.html
@@ -81,5 +81,6 @@ yh1mKXIwT15sbj6v5UhmV3KTlsrmk7N7c+5iSvRa8UgWTAN6of19cBamiiIlyYCF
 Fz0hws+of4dYqA==
 =wWmZ
 -----END PGP PUBLIC KEY BLOCK-----</pre></p>
+    <p>Bitcoin: 1K9qsgtdoqUWnuQCgNftN54JZPQp5PHaej</p>
   </div>
 </div>
