Updating ohio log

--- a/ohio.html
+++ b/ohio.html
@@ -9,7 +9,7 @@ title: "What To Do: Ohio"
 			<li>Kabuki Sushi, 848 S Main St, Centerville, OH 45458, (937) 435-9500 </li>
 			<li>City Barbeque, 5 E Franklin St, Centerville, OH 45459, (937) 312-1350</li>
 			<li>Bill's Donut Shop, 268 N Main St, Centerville, OH 45402, (937) 433-0002</li>
-			<li>Boston Stoker, 6177 Far Hills Ave, Dayton, OH 45459, (937) 434-0075</li>
+			<li><string>Boston Stoker, 6177 Far Hills Ave, Dayton, OH 45459, (937) 434-0075</strike> 2013-07-18<br/>This is my new favorite coffee shop.</li>
 			<li>Amar India Restaurant, 2751 Miamisburg-Centerville Rd., Dayton, OH 45458, (937) 439-9005</li>
 			<li>India Chaat Cafe, 984 Miamisburg-Centerville Rd, Dayton, OH 45458, (937) 435-3557</li>
 			<li>Graeter's Ice Cream, 2 N Main St, Centerville, OH 45459, (937) 312-9001</li>
@@ -24,6 +24,7 @@ title: "What To Do: Ohio"
 			<li>The Wright Cycle Company Complex, 16 South Williams Street, Dayton, OH 45402</li>
 			<li>Aullwood Audubon Center, 1000 Aullwood Road, Dayton, OH 45414</li>
 			<li>Great Wolf Lodge, 2501 Great Wolf Drive, Mason, OH 45040</li>
+			<li><strike>Pasha Grillm 72 Plum Street Beavercreek, OH 45440</strike> 2013-07-17<br/>There were a lot of flies, but the food was ok.</li>
 		</ul>
   </div>
 </div>
