Fixed a bad html element.

--- a/ohio.html
+++ b/ohio.html
@@ -9,7 +9,7 @@ title: "What To Do: Ohio"
 			<li>Kabuki Sushi, 848 S Main St, Centerville, OH 45458, (937) 435-9500 </li>
 			<li>City Barbeque, 5 E Franklin St, Centerville, OH 45459, (937) 312-1350</li>
 			<li>Bill's Donut Shop, 268 N Main St, Centerville, OH 45402, (937) 433-0002</li>
-			<li><string>Boston Stoker, 6177 Far Hills Ave, Dayton, OH 45459, (937) 434-0075</strike> 2013-07-18<br/>This is my new favorite coffee shop.</li>
+			<li><strike>Boston Stoker, 6177 Far Hills Ave, Dayton, OH 45459, (937) 434-0075</strike> 2013-07-18<br/>This is my new favorite coffee shop.</li>
 			<li>Amar India Restaurant, 2751 Miamisburg-Centerville Rd., Dayton, OH 45458, (937) 439-9005</li>
 			<li>India Chaat Cafe, 984 Miamisburg-Centerville Rd, Dayton, OH 45458, (937) 435-3557</li>
 			<li>Graeter's Ice Cream, 2 N Main St, Centerville, OH 45459, (937) 312-9001</li>
