Removing google analytics. Misc editing of last blog post.

--- a/ohio.html
+++ b/ohio.html
@@ -14,7 +14,7 @@ title: "What To Do: Ohio"
 			<li>India Chaat Cafe, 984 Miamisburg-Centerville Rd, Dayton, OH 45458, (937) 435-3557</li>
 			<li>Graeter's Ice Cream, 2 N Main St, Centerville, OH 45459, (937) 312-9001</li>
 			<li>China Cottage, 6290 Far Hills Ave, Dayton, OH 45459, (937) 434-2622</li>
-			<li>Marion's Piazza, 241 N Main St, Dayton, OH 45402, (937) 433-3993</li>
+			<li><strike>Marion's Piazza, 241 N Main St, Dayton, OH 45402, (937) 433-3993</strike><br/> We've ordered from here a few times now. I'm on the fence on how I feel about the food.</li>
 			<li>The Original Pancake House, 1516 Miamisburg Centerville Rd, Dayton, OH 45459, (937) 438-5720</li>
 			<li>The Melting Pot, 453 Miamisburg Centerville Rd Centerville, OH 45459, (937) 567-8888</li>
 			<li>My Favorite Muffin And Bagel, 220 Alex Bell Rd, Centerville, OH 45459 </li>
